# GenAI-Document-Portal

./: README.md  main.py  projectflow.txt  pyproject.toml  requirements.txt
config/: config.yaml
data/: Agentic_AI.txt
multi_doc_chat/configuration/: mongodb_connection.py
multi_doc_chat/constants/: __init__.py
multi_doc_chat/exception/: __init__.py
multi_doc_chat/logger/: __init__.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/: data_ingestion.py  data_retrieval.py
multi_doc_chat/utils/: main_utils.py
notebook/: RAG.ipynb
static/: styles.css
templates/: index.html
